fixed gap bug

--- a/src/pages/Products/styles.module.scss
+++ b/src/pages/Products/styles.module.scss
@@ -4,7 +4,7 @@
 
   .content {
     display: flex;
-    gap: 20;
+    gap: 20px;
   }
 }
 
